--- a/main.scss
+++ b/main.scss
@@ -1,25 +1,37 @@
-// 산술연산
+// mixin (재활용)
 // https://www.sassmeister.com/
 
-div {
-  $size: 30px;
-  width: 20px + 20px;
-  height: 40px - 10px;
-  font-size: (30px / 2);
-  margin: 10px * 2;
-  margin: $size / 2;
-  margin: 10px + 12px / 2;
-  padding: 20px % 7;
-  
+@mixin center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-span {
-  font-size: 10px;
-  line-height: 10px;
-  font-family: serif;
-  font: 10px / 10px serif;
+.container {
+  @include center;
+  .item {
+      @include center;
+  }
 }
 
-div {
-  width: calc(100% - 200px);
+.box {
+  @include center;
+}
+
+
+@mixin box($size: 100px, $color: tomato) {
+  width: $size;
+  height: $size;
+  background-color: $color;
+}
+
+.container {
+  @include box(200px, red);
+  .item {
+      @include box($color: green);
+  }
+}
+
+.box {
+  @include box;
 }
